# learning_cmake

./: README.md  create.sh
00_helloCMake/: CMakeLists.txt  README.md  hello.cpp
01-hello-headers/: CMakeLists.txt  README.md
01-hello-headers/include/: hello.h
01-hello-headers/src/: hello.cpp  main.cpp
02-c-static-library/: CMakeLists.txt  README.md
02-c-static-library/src/: main.cpp
03-c-shared-library/: CMakeLists.txt  README.md
03-c-shared-library/src/: hello.cpp
